// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/tooltip/Tooltip render() should not render the close button if wasClosedByUser state is true 1`] = `
<TetherComponent
  attachment="bottom center"
  bodyElement={<body />}
  classPrefix="tooltip"
  constraints={
    Array [
      Object {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={false}
  renderElementTag="div"
  renderElementTo={null}
  targetAttachment="top center"
>
  <div>
    Hello
  </div>
</TetherComponent>
`;

exports[`components/tooltip/Tooltip render() should not render with close button if isShown is false 1`] = `
<TetherComponent
  attachment="bottom center"
  bodyElement={<body />}
  classPrefix="tooltip"
  constraints={
    Array [
      Object {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={false}
  renderElementTag="div"
  renderElementTo={null}
  targetAttachment="top center"
>
  <div>
    Hello
  </div>
</TetherComponent>
`;

exports[`components/tooltip/Tooltip render() should not render with close button if showCloseButton is false 1`] = `
<TetherComponent
  attachment="bottom center"
  bodyElement={<body />}
  classPrefix="tooltip"
  constraints={
    Array [
      Object {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElementTag="div"
  renderElementTo={null}
  targetAttachment="top center"
>
  <div
    aria-describedby="tooltip3"
  >
    Hello
  </div>
  <div
    className="tooltip"
    id="tooltip3"
    role="tooltip"
  >
    hi
  </div>
</TetherComponent>
`;

exports[`components/tooltip/Tooltip render() should render children only when tooltip is disabled 1`] = `
<div>
  Hello
</div>
`;

exports[`components/tooltip/Tooltip render() should render children wrapped in tether when tooltip has text missing 1`] = `
<TetherComponent
  attachment="bottom center"
  bodyElement={<body />}
  classPrefix="tooltip"
  constraints={
    Array [
      Object {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={false}
  renderElementTag="div"
  renderElementTo={null}
  targetAttachment="top center"
>
  <div
    onBlur={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    tabIndex="0"
  >
    Hello
  </div>
</TetherComponent>
`;

exports[`components/tooltip/Tooltip render() should render correctly with callout theme 1`] = `
<TetherComponent
  attachment="bottom center"
  bodyElement={<body />}
  classPrefix="tooltip"
  constraints={
    Array [
      Object {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElementTag="div"
  renderElementTo={null}
  targetAttachment="top center"
>
  <div
    aria-describedby="tooltip5"
  >
    Hello
  </div>
  <div
    className="tooltip is-callout"
    id="tooltip5"
    role="tooltip"
  >
    hi
  </div>
</TetherComponent>
`;

exports[`components/tooltip/Tooltip render() should render with close button if isShown and showCloseButton are true 1`] = `
<TetherComponent
  attachment="bottom center"
  bodyElement={<body />}
  classPrefix="tooltip"
  constraints={
    Array [
      Object {
        "attachment": "together",
        "to": "window",
      },
    ]
  }
  enabled={true}
  renderElementTag="div"
  renderElementTo={null}
  targetAttachment="top center"
>
  <div
    aria-describedby="tooltip1"
  >
    Hello
  </div>
  <div
    className="tooltip with-close-button"
    id="tooltip1"
    role="tooltip"
  >
    hi
    <PlainButton
      className="tooltip-close-button"
      onClick={[Function]}
    >
      <IconClose />
    </PlainButton>
  </div>
</TetherComponent>
`;
